--- a/application/layouts/layout.phtml
+++ b/application/layouts/layout.phtml
@@ -3,14 +3,90 @@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
     <link rel="stylesheet" type="text/css" href="http://code.jquery.com/ui/1.10.0/themes/base/jquery-ui.css" />
     <script src="http://code.jquery.com/ui/1.10.0/jquery-ui.js"></script>
+    <link type="text/css" rel="stylesheet" href="http://supercapex.localhost/css/style.css" /> 
+    <script>
+        window.onload = function(){
+            var a1 = document.getElementById('signin-link');
+            var a2 = document.getElementById('signoff-link');
+            if (a1){
+                a1.onclick = function(){
+                    $("#signin").dialog("open");
+                    return false;
+                }    
+            }
+            if (a2){
+                a2.onclick = function (){
+                    $.post('<?php echo $this->url(array('controller' => 'auth', 'action' => 'logoff'), null, true); ?>', function(data){location.reload();});
+                }
+            }
+        }
+
+        $(function(){
+            
+            $("#signin").dialog({
+                autoOpen: false,
+                modal:    true,
+                buttons: {
+                    'Login': function(){
+                        $.post('<?php echo $this->url(array('controller' => 'auth', 'action' => 'auth'), null, true); ?>', $('#signin-form').serialize())
+                        .done(function(data){location.reload();});
+                        $(this).dialog("close");
+                    },
+                    'Close': function() {
+                        $(this).dialog("close");
+                    }
+                }
+            });
+        });
+    
+    </script>    
+
 </head>
-<a href="<?php echo $this->url(array('controller'=>'objects', 'action'=>'index', 'objectType'=>'item')) ?>">items</a> 
-| <a href="<?php echo $this->url(array('controller'=>'objects', 'action'=>'index', 'objectType'=>'level')) ?>">levels</a> 
-| <a href="<?php echo $this->url(array('controller'=>'objects', 'action'=>'index', 'objectType'=>'position')) ?>">positions</a> 
-| <a href="<?php echo $this->url(array('controller'=>'objects', 'action'=>'index', 'objectType'=>'element')) ?>">elements</a>
-| <a href="<?php echo $this->url(array('controller'=>'objects', 'action'=>'index', 'objectType'=>'user')) ?>">users</a>
-| <a href="<?php echo $this->url(array('controller'=>'objects', 'action'=>'index', 'objectType'=>'orgobject')) ?>">orgobjects</a>
+<?php
+$session = new Zend_Session_Namespace('Auth');
+if (1 == $session->auth) {
+    echo '<a href="#" id="signoff-link">Logout</a>';
+    $acl = new Application_Model_AccessMapper($session->userId);
+} else {
+    echo '<a href="#" id="signin-link">Sign in</a>';
+    $acl = new Application_Model_AccessMapper();
+}
+$navigationConfig = new Zend_Config_Xml(APPLICATION_PATH . '/configs/navigation.xsd', 'nav');
+$container = new Zend_Navigation($navigationConfig);
+$this->navigation($container);
+$this->navigation()->setAcl($acl->acl);
+$this->navigation()->setRole($session->login);
+//Zend_Debug::dump($session->login);
+// +++++++++++ FIX ME ++++++++++++++++++ FIX ME ++++++++++++++++++++++++ FIX ME
+if ($session->admin) {
+    $this->navigation()->menu()->setPartial('partials/navigation/adminmenu.phtml');
+} elseif ($session->auth) {
+    $this->navigation()->menu()->setPartial('partials/navigation/mainmenu.phtml');
+}
+// ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+echo $this->navigation()->menu()->render();
+?>
 <hr>
+
+<div id="signin">
+    <form id="signin-form">
+        <table>
+            <tr>
+                <td><label for="login">Login</label></td>
+            </tr>
+            <tr>
+                <td><input type="text" id="login" name="login"></td>
+            </tr>
+            <tr>
+                <td><label for="password">Password</label></td>
+            </tr>
+            <tr>
+                <td><input type="password" id="password" name="password"></td>
+            </tr>
+        </table>
+    </form>
+</div>
+
 <?php
 echo $this->layout()->content;
 echo $this->partial('partials/todo.php');
