--- a/application/views/scripts/partials/object-forms/node-form.phtml
+++ b/application/views/scripts/partials/object-forms/node-form.phtml
@@ -1,28 +1,40 @@
-<div id="add-object-form" title="Add new level">
+<div id="add-object-form" title="Add new node">
     <form id="object-form">
-        <label for="levelName">Level Name</label>
-        <input type="text" id="levelName" name="levelName" />
-        <?php
-        if (!empty($this->subobjects['levels']) && is_array($this->subobjects['levels'])) {
-            echo '<select  id="parentLevelId" name="parentLevelId">';
-            echo '<option value="-1">No parent</option>';
-            foreach ($this->subobjects['levels'] as $level) {
-                echo '<option " value="' .
-                $level->levelId .'">' .
-                $level->levelName .
-                '</option>';
+        <table>
+            <tr>
+                <td><label for="nodeName">Node Name</label></td>
+            </tr>
+            <tr>
+                <td><input type="text" name="_nodeName" /></td>
+            </tr>
+            <?php
+            if (!empty($this->subobjects['nodes']) && is_array($this->subobjects['nodes'])) {
+                echo '<tr>';
+                echo '<td>';
+                echo '<select  id="parentNodeId" name="_parentNodeId">';
+                echo '<option value="-1">No parent</option>';
+                foreach ($this->subobjects['nodes'] as $node) {
+                    echo '<option " value="' .
+                    $node->nodeId . '">' .
+                    $node->nodeName .
+                    '</option>';
+                }
+                echo '</select>';
+                echo '</td>';
+                echo '</tr>';
+            } else {
+                echo '<input type="hidden" id="parentNodeId" name="_parentNodeId" value="-1">';
             }
-            echo '</select>';
-        } else {
-            echo '<input type="hidden" id="parentLevelId" name="parentLevelId" value="-1">';
-        }
-        ?>
-        <input type="hidden" id="domainId" name="domainId" value="1">
+            ?>
+            <tr>
+                <td><input type="hidden" id="domainId" name="_domainId" value="1"></td>
+            </tr>
+        </table>
     </form>
 </div>
 
-<button id="add-object-btn">Add level</button>
+<button id="add-object-btn">Add node</button>
 
 <div id="main">
-<?php echo $this->partial('partials/object-lists/level-list.phtml', array('levels' => $this->objects)); ?>
+    <?php echo $this->partial('partials/object-lists/node-list.phtml', array('nodes' => $this->objects)); ?>
 </div>
