--- a/application/views/scripts/partials/object-lists/node-list.phtml
+++ b/application/views/scripts/partials/object-lists/node-list.phtml
@@ -1,8 +1,8 @@
 <table>
 <?php
-if (is_array($this->levels)){
-    foreach ($this->levels as $level) {
-        echo '<tr><td><a href="'.$this->url(array('controller'=>'objects', 'action'=>'delete','levelId'=>$level->levelId)).'">x</a></td><td>'.$level->levelName . '</td><td>' . $level->parentLevelId . '</td></tr>';
+if (is_array($this->nodes)){
+    foreach ($this->nodes as $node) {
+        echo '<tr><td><a href="'.$this->url(array('controller'=>'objects', 'action'=>'delete','nodeId'=>$node->nodeId)).'">x</a></td><td>'.$node->nodeName . '</td><td>' . $node->parentNodeId . '</td></tr>';
     }
 }
 ?>
