--- a/application/views/scripts/partials/object-lists/user-list.phtml
+++ b/application/views/scripts/partials/object-lists/user-list.phtml
@@ -2,18 +2,21 @@
 <?php
 if (is_array($this->users)){
     foreach ($this->users as $user) {
-        echo '<tr><td><a href="'.
+        echo '<tr>' . PHP_EOL;
+        echo '<td><a href="'.
                 $this->url(array('controller'=>'objects',
                                  'action'=>'delete',
                                  'userId'=>$user->userId,
                                  'objectType'=>'user')).
-                '">x</a></td><td>'.
-                $user->userName .
-                '</td><td>' .
-                $user->login .
-                '</td><td>' .
-                $user->positionId .
-                '</td></tr>';
+                '">x</a></td>' . PHP_EOL;
+        echo '<td>' . $user->userName . '</td>' . PHP_EOL;
+        echo '<td>' . $user->login . '</td>' . PHP_EOL;
+        echo '<td>' . $user->positionId . '</td>' . PHP_EOL;
+        echo '<td><a href="' . $this->url(array('controller' => 'objects',
+                                                'action' => 'user-privileges',
+                                                'userId' => $user->userId)) .
+             '">Privileges </td>' . PHP_EOL;
+        echo '</tr>' . PHP_EOL;
     }
 }
 ?>
