--- a/application/views/scripts/partials/object-forms/element-form.phtml
+++ b/application/views/scripts/partials/object-forms/element-form.phtml
@@ -20,10 +20,7 @@
                 <td><input type="text" id="elementComment" name="_elementComment" /></td>
             </tr>
             <tr>
-                <td><input type="hidden" id="domainId" name="_domainId" value="1"></td>
-            </tr>
-            <tr>
-                <td><input type="hidden" id="objectType" name=_"objectType" value="element"></td>
+                <td><input type="hidden" id="objectType" name="objectType" value="element"></td>
             </tr>
         </table>
     </form>
