Clean some redundant code

--- a/application/views/scripts/partials/object-forms/node-form.phtml
+++ b/application/views/scripts/partials/object-forms/node-form.phtml
@@ -27,7 +27,7 @@
             }
             ?>
             <tr>
-                <td><input type="hidden" id="domainId" name="_domainId" value="1"></td>
+                <td><input type="hidden" id="objectType" name="objectType" value="node"></td>
             </tr>
         </table>
     </form>
