Clean some redundant code

--- a/application/views/scripts/partials/object-lists/node-list.phtml
+++ b/application/views/scripts/partials/object-lists/node-list.phtml
@@ -2,7 +2,17 @@
 <?php
 if (is_array($this->nodes)){
     foreach ($this->nodes as $node) {
-        echo '<tr><td><a href="'.$this->url(array('controller'=>'objects', 'action'=>'delete','nodeId'=>$node->nodeId)).'">x</a></td><td>'.$node->nodeName . '</td><td>' . $node->parentNodeId . '</td></tr>';
+        echo '<tr><td><a href="'.$this->url(array('controller'=>'objects',
+                                                  'action'=>'delete',
+                                                  'objectType'=>'node',
+                                                  'nodeId'=>$node->nodeId), null, true).
+             '">x</a></td><td><a href="' . $this->url(array('controller'=>'objects',
+                                                            'action'=>'edit-object',
+                                                            'objectType'=>'node',
+                                                            'nodeId'=>$node->nodeId)).
+             '">'.$node->nodeName .
+             '</a></td><td>' . $node->parentNodeId .
+             '</td></tr>';
     }
 }
 ?>
