Clean some redundant code

--- a/application/views/scripts/partials/object-forms/position-form.phtml
+++ b/application/views/scripts/partials/object-forms/position-form.phtml
@@ -29,7 +29,7 @@
                 <td><input type="hidden" id="domainId" name="_domainId" value="1"></td>
             </tr>
             <tr>
-                <td><input type="hidden" id="objectType" name="_objectType" value="position"></td>
+                <td><input type="hidden" id="objectType" name="objectType" value="position"></td>
             </tr>
         </table>
     </form>
