--- a/application/views/scripts/partials/object-lists/node-list.phtml
+++ b/application/views/scripts/partials/object-lists/node-list.phtml
@@ -1,19 +1,20 @@
-<table>
-<?php
-if (is_array($this->nodes)){
-    foreach ($this->nodes as $node) {
-        echo '<tr><td><a href="'.$this->url(array('controller'=>'objects',
-                                                  'action'=>'delete',
-                                                  'objectType'=>'node',
-                                                  'nodeId'=>$node->nodeId), null, true).
-             '">x</a></td><td><a href="' . $this->url(array('controller'=>'objects',
-                                                            'action'=>'open-object',
-                                                            'objectType'=>'node',
-                                                            'nodeId'=>$node->nodeId)).
-             '">'.$node->nodeName .
-             '</a></td><td>' . $node->parentNodeId .
-             '</td></tr>';
+<div id="objects-list">
+    <?php
+    if (is_array($this->nodes)) {
+        foreach ($this->nodes as $node) {
+            echo '<div id="object"><div id="delete-object-icon"><a href="' . $this->url(array('controller' => 'objects',
+                'action' => 'delete',
+                'objectType' => 'node',
+                'nodeId' => $node->nodeId), null, true) .
+            '">x</a></div><div id="object-name"><a href="' . $this->url(array('controller' => 'objects',
+                'action' => 'open-object',
+                'objectType' => 'node',
+                'nodeId' => $node->nodeId)) .
+            '">' . $node->nodeName .
+            '</a></div><div id="parent-object">' . $node->parentNodeId .
+            '</div></div>';
+        }
     }
-}
-?>
-</table>
+    ?>
+    <div style="display: block; clear: both;"></div>
+</div>
