Migrating to Foundation slowly

--- a/application/views/scripts/form/index.phtml
+++ b/application/views/scripts/form/index.phtml
@@ -23,22 +23,23 @@ if (is_array($this->forms)) {
                 $class = ' class="declined" ';
             }
         }
+        $class = ' row ';
         if (!$form['form']->public){
-            $class=' class="private"';
+            $class.=' private ';
         }
-        echo '<div id="forms-entry" ' .$class. ' onClick="openForm(\'form_'.$form['form']->formId.'\')" >'. PHP_EOL .
-                '<div id="forms-decision"></div>' . PHP_EOL .
-                '<div id="forms-deptmt">' . PHP_EOL .
-                    (!empty($form['parentNode'])? '<div id="forms-parentNode">' . $form['parentNode']->nodeName . '</div>':'') . PHP_EOL .
-                    '<div id="forms-node">' . $form['node']->nodeName . '</div>' . PHP_EOL .
+        echo '<div class ="' .$class. '" onClick="openForm(\'form_'.$form['form']->formId.'\')" >'. PHP_EOL .
+                '<div class="small-1 columns"></div>' . PHP_EOL .
+                '<div  class="small-2 columns">' . PHP_EOL .
+                    (!empty($form['parentNode'])? '<div class="row">' . $form['parentNode']->nodeName . '</div>':'') . PHP_EOL .
+                    '<div class="row">' . $form['node']->nodeName . '</div>' . PHP_EOL .
                 '</div>'. PHP_EOL .
-                '<div id="forms-owner">' . PHP_EOL .
-                   '<div id="forms-date">' . substr($form['form']->date, 0, strpos($form['form']->date, ' ')) . '</div>' . PHP_EOL .
-                   '<div id="forms-userName">' . $form['owner']->userName . '</div>' . PHP_EOL .
+                '<div class="small-2 columns">' . PHP_EOL .
+                   '<div class="row">' . substr($form['form']->date, 0, strpos($form['form']->date, ' ')) . '</div>' . PHP_EOL .
+                   '<div class="row">' . $form['owner']->userName . '</div>' . PHP_EOL .
                 '</div>' . PHP_EOL .
-                '<div id="forms-contragent">' . $form['contragent']->contragentName. '</div>' . PHP_EOL .
-                '<div id="forms-descr">' . $form['form']->formName . '</div>' . PHP_EOL .
-                '<div id="forms-total">' . sprintf("%01.2f", $form['total']) . '</div>' . PHP_EOL .
+                '<div class="small-2 columns">' . $form['contragent']->contragentName. '</div>' . PHP_EOL .
+                '<div class="small-2 columns">' . $form['form']->formName . '</div>' . PHP_EOL .
+                '<div class="small-2 columns">' . sprintf("%01.2f", $form['total']) . '</div>' . PHP_EOL .
             '</div>';
 
     }
