--- a/application/views/scripts/form/index.phtml
+++ b/application/views/scripts/form/index.phtml
@@ -10,70 +10,121 @@
 </script>
 <!-- GLOBAL CONTAINER FOR FORMS LIST AND FORM DETAILS -->
 <div>
+    <!-- Left part of FORMS page -->
+    <div class="large-8 left">
+    <!-- Different controls go here (like filter etc) -->
+        <form class="filter custom">
+            <fieldset class="left form-fieldset"> 
+                <legend>
+                    <div class="switch small round">
+                        <input id="x" name="switch-x" type="radio" checked>
+                        <label for="x" onclick=""><?php echo $this->translate('off'); ?></label>
 
-    <!--  Forms list goes here -->
-    <div class="large-8 columns">
-        <?php
-        if (is_array($this->forms)) {
-            echo '<table>';
-            foreach ($this->forms as $form) {
-                $class = '';
-                if ($form['form']->final) {
-                    if ('approve' == $form['form']->decision) {
-                        $class = ' class="approved" ';
-                    } else {
-                        $class = ' class="declined" ';
-                    }
-                }
-                if (!$form['form']->public) {
-                    $class.=' private ';
-                }
-                echo '<tr ' . $class . ' onClick="openForm(\'form_' . $form['form']->formId . '\')" >' . PHP_EOL .
-                '<td>' . PHP_EOL .
-                (!empty($form['parentNode']) ? $form['parentNode']->nodeName : '') . PHP_EOL .
-                '</td><td>' . $form['node']->nodeName . '</td>' . PHP_EOL .
-                '<td>' . PHP_EOL .
-                substr($form['form']->date, 0, strpos($form['form']->date, ' ')) . '</td>' . PHP_EOL .
-                '<td>' . $form['owner']->userName . '</td>' . PHP_EOL .
-                '<td>' . $form['contragent']->contragentName . '</td>' . PHP_EOL .
-                '<td>' . $form['form']->formName . '</td>' . PHP_EOL .
-                '<td>' . sprintf("%01.2f", $form['total']) . '</td>' . PHP_EOL .
-                '</tr>';
-            }
-            echo '</table>';
-        }
-        ?>
+                        <input id="x1" name="switch-x" type="radio">
+                        <label for="x1" onclick=""><?php echo $this->translate('on'); ?></label>
 
-        <!-- Paginator -->
-        <div class="pagination-centered">
-            <ul class="pagination">
-                <li class="arrow <?php echo ($this->currentPage == 1) ? 'unavailable': ''; ?>"><a href="<?php echo $this->url(array('controller'=>'form', 'action'=>'index', 'page'=>1), null, true);?>">&laquo;</a></li>
-                <?php
-                if ($this->pages > 1) {
-                    for ($i = 1; $i <= $this->pages; $i++) {
-                        if ($i == $this->currentPage) {
-                            $class = 'class="current"';
+                        <span></span>
+                    </div>
+                </legend>
+                <div class="left filter-items">
+                <label for="checkbox1">
+                    <input type="checkbox" id="checkbox1" style="display: none;">
+                    <span class="custom checkbox"></span> <?php echo $this->translate('all'); ?>
+                </label>
+                <label for="checkbox2">
+                    <input type="checkbox" id="checkbox2" style="display: none;">
+                    <span class="custom checkbox"></span> <?php echo $this->translate('new'); ?>
+                </label>
+                </div>
+                <div class="left filter-items">
+                <label for="checkbox3">
+                    <input type="checkbox" id="checkbox3" style="display: none;">
+                    <span class="custom checkbox"></span> <?php echo $this->translate('approved'); ?>
+                </label>
+                <label for="checkbox4">
+                    <input type="checkbox" id="checkbox4" style="display: none;">
+                    <span class="custom checkbox"></span> <?php echo $this->translate('declined'); ?>
+                </label>
+                </div>
+                <div class="left filter-items">
+                <label for="checkbox5">
+                    <input type="checkbox" id="checkbox5" style="display: none;">
+                    <span class="custom checkbox"></span> <?php echo $this->translate('progress'); ?>
+                </label>
+                </div>
+            </fieldset>
+            <div class="large-4 right search">
+                <input type="text" name="search" id="search" placeholder="<?php echo $this->translate('search');?>">
+            </div>
+            <div style="display: block; clear: both"></div>
+        </form>
+            <button class ="add-form-button"onclick="addForm()"><?php echo $this->translate('add form'); ?></button>
+
+        <!-- End of different controls go here (like filter etc) -->
+
+        <!--  Forms list goes here -->
+        <div class="form-list">
+            <?php
+            if (is_array($this->forms)) {
+                echo '<table width=100%>';
+                foreach ($this->forms as $form) {
+                    $class = '';
+                    if ($form['form']->final) {
+                        if ('approve' == $form['form']->decision) {
+                            $class = ' class="approved" ';
                         } else {
-                            $class = '';
+                            $class = ' class="declined" ';
                         }
-                        echo "<li $class ><a href='" . $this->url(array('controller'=>'form', 'action'=>'index', 'page'=>$i), null, true) . "'>" . $i . '</a></li>' . PHP_EOL;
                     }
+                    if (!$form['form']->public) {
+                        $class.=' private ';
+                    }
+                    echo '<tr onClick="openForm(\'form_' . $form['form']->formId . '\')" >' . PHP_EOL .
+                    '<td>' . PHP_EOL .
+                    (!empty($form['parentNode']) ? $form['parentNode']->nodeName : '') . PHP_EOL .
+                    '</td><td>' . $form['node']->nodeName . '</td>' . PHP_EOL .
+                    '<td>' . PHP_EOL .
+                    substr($form['form']->date, 0, strpos($form['form']->date, ' ')) . '</td>' . PHP_EOL .
+                    '<td>' . $form['owner']->userName . '</td>' . PHP_EOL .
+                    '<td>' . $form['contragent']->contragentName . '</td>' . PHP_EOL .
+                    '<td>' . $form['form']->formName . '</td>' . PHP_EOL .
+                    '<td>' . sprintf("%01.2f", $form['total']) . '</td>' . PHP_EOL .
+                    '</tr>';
                 }
-                ?>
-                <li class="arrow <?php echo ($this->currentPage == $this->pages) ? 'unavailable': ''; ?>"><a href="<?php echo $this->url(array('controller'=>'form', 'action'=>'index', 'page'=>$this->pages), null, true); ?>">&raquo;</a></li>
-            </ul>
+                echo '</table>';
+            }
+            ?>
+
+            <!-- Paginator -->
+            <div class="pagination-centered">
+                <ul class="pagination">
+                    <li class="arrow <?php echo ($this->currentPage == 1) ? 'unavailable' : ''; ?>"><a href="<?php echo $this->url(array('controller' => 'form', 'action' => 'index', 'page' => 1), null, true); ?>">&laquo;</a></li>
+                    <?php
+                    if ($this->pages > 1) {
+                        for ($i = 1; $i <= $this->pages; $i++) {
+                            if ($i == $this->currentPage) {
+                                $class = 'class="current"';
+                            } else {
+                                $class = '';
+                            }
+                            echo "<li $class ><a href='" . $this->url(array('controller' => 'form', 'action' => 'index', 'page' => $i), null, true) . "'>" . $i . '</a></li>' . PHP_EOL;
+                        }
+                    }
+                    ?>
+                    <li class="arrow <?php echo ($this->currentPage == $this->pages) ? 'unavailable' : ''; ?>"><a href="<?php echo $this->url(array('controller' => 'form', 'action' => 'index', 'page' => $this->pages), null, true); ?>">&raquo;</a></li>
+                </ul>
+            </div>
+            <!-- End of PAGINATOR -->
+
         </div>
-        <!-- End of PAGINATOR -->
-
-
-    </div>
     <!-- END Forms list -->
-
+    </div>
+    <!-- END left part of FORMS page -->
 
     <!-- Form's details -->
-    <div id="form-open" class="large-4 columns"></div>
+    <div id="form-open" class="large-4 right"></div>
     <!-- END Forms details -->
-    <button id="add-form-btn" onclick="addForm()"><?php echo $this->translate('add form'); ?></button>
+
 
 </div>
 <!-- END GLOBAL CONTAINER -->
