--- a/application/views/scripts/partials/object-forms/node-form.phtml
+++ b/application/views/scripts/partials/object-forms/node-form.phtml
@@ -7,7 +7,7 @@
             <input type="text" name="_nodeName" placeholder="<?php echo $this->translate('node name'); ?>" />
         </div>
         <div>
-            <label for="parentNodeId"><?php echo $this->translate('select parent node');?></label>
+            <label for="parentNodeId"><?php echo $this->translate('parent node');?></label>
         </div>
         <?php
         if (!empty($this->subobjects['nodes']) && is_array($this->subobjects['nodes'])) {
