--- a/application/views/scripts/objects/user-privileges.phtml
+++ b/application/views/scripts/objects/user-privileges.phtml
@@ -1,3 +1,5 @@
+<link type="text/css" rel="stylesheet" href="<?php echo $this->baseUrl('css/expList.css'); ?>" />
+    
 <script type="text/javascript">
 /**************************************************************/
 /* Prepares the cv to be dynamically expandable/collapsible   */
