--- a/application/views/scripts/partials/object-lists/position-list.phtml
+++ b/application/views/scripts/partials/object-lists/position-list.phtml
@@ -5,7 +5,7 @@
             foreach ($this->positions as $position) {
                 echo '<tr>' . PHP_EOL .
                         '<td>' . PHP_EOL .
-                            '<a href="#" onClick="deleteObject(\'position\', ' . $position->positionId . ')">x</a>' . PHP_EOL .
+                            '<a href="#" onClick="deleteObject(\'position\', ' . $position->positionId . ')">&times</a>' . PHP_EOL .
                         '</td>' . PHP_EOL .
                         '<td>' . PHP_EOL .
                             '<a href="' .
