--- a/application/views/scripts/partials/object-lists/element-list.phtml
+++ b/application/views/scripts/partials/object-lists/element-list.phtml
@@ -4,7 +4,7 @@
         if (is_array($this->elements)) {
             foreach ($this->elements as $element) {
                 echo '<tr>' . PHP_EOL;
-                echo '<td><a href="#" onClick="deleteObject(\'element\', ' . $element->elementId . ')">x</a></td>' . PHP_EOL;
+                echo '<td><a href="#" onClick="deleteObject(\'element\', ' . $element->elementId . ')">&times</a></td>' . PHP_EOL;
                 echo '<td>' . $element->elementName . '</td>' . PHP_EOL;
                 echo '<td>' . $element->elementCode . '</td>' . PHP_EOL;
                 echo '<td>' . $element->expgroup . '</td>' . PHP_EOL;
