--- a/application/views/scripts/partials/scenario/list.phtml
+++ b/application/views/scripts/partials/scenario/list.phtml
@@ -9,7 +9,7 @@ if ($this->scenarios){
         }
         echo '<tr><td><a href="' .
                 $this->url(array('controller'=>'scenario', 'action'=>'delete-scenario', 'scenarioId'=>$scenario->scenarioId)) . 
-                '">x</a></td><td><a href="'.
+                '">&times</a></td><td><a href="'.
                 $this->url(array('controller'=>'scenario', 'action'=>'edit-scenario', 'scenarioId'=>$scenario->scenarioId)).
                 '">' . $scenario->scenarioName .
                 '</td><td>'.$assigned.'</td></tr>' . PHP_EOL;
