--- a/public/css/style.css
+++ b/public/css/style.css
@@ -20,48 +20,6 @@ body {
     clear: both;
 }
 
-
-/********************/
-/* EXPANDABLE LIST  */
-/********************/
-#listContainer{
-    margin-top:15px;
-}
-
-#expList ul, li {
-    list-style: none;
-    margin:0;
-    padding:0;
-    cursor: pointer;
-}
-#expList p {
-    margin:0;
-    display:block;
-}
-#expList p:hover {
-    background-color:#121212;
-}
-li {
-    line-height:140%;
-    text-indent:0px;
-    background-position: 1px 8px;
-    padding-left: 20px;
-    background-repeat: no-repeat;
-}
-
-/* Collapsed state for list element */
-li.collapsed {
-    background-image: url(../img/collapsed.png);
-}
-/* Expanded state for list element
-/* NOTE: This class must be located UNDER the collapsed one */
-li.expanded {
-    background-image: url(../img/expanded.png);
-}
-li {
-    clear: both;
-}
-
 .listControl{
     margin-bottom: 15px;
 }
@@ -132,6 +90,13 @@ tr.private td{
 /*****************************/
 /*     Index page            */
 /*****************************/
+
+.blog-article {
+    float: left;
+    width: 60%;
+    margin-left: 5%;
+    margin-right: 5%;
+}
 
 .registration-form {
     float: right;
