--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -47,6 +47,8 @@
             Anything else?
         </li>
     </ul>
+    
+    <a href="/wordpress/">Please, check out here for further details.</a>
 </div>  
 
 <div class="registration-form">
