--- a/application/layouts/layout.phtml
+++ b/application/layouts/layout.phtml
@@ -9,13 +9,28 @@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
     <link rel="stylesheet" type="text/css" href="http://code.jquery.com/ui/1.10.0/themes/base/jquery-ui.css" />
     <script src="http://code.jquery.com/ui/1.10.0/jquery-ui.js"></script>
-    <!--
-    <script src="<?php echo $this->baseUrl('js/scripts.js'); ?>"></script>
-    -->
+    <script>
+        (function(i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r;
+            i[r] = i[r] || function() {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date();
+            a = s.createElement(o),
+                    m = s.getElementsByTagName(o)[0];
+            a.async = 1;
+            a.src = g;
+            m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+
+        ga('create', 'UA-42773043-1', 'capexopex.net');
+        ga('send', 'pageview');
+
+    </script>
+
     <link type="text/css" rel="stylesheet" href="<?php echo $this->baseUrl('css/style.css'); ?>" /> 
-    <?php
-    $session = new Zend_Session_Namespace('Auth');
-    ?>
+<?php
+$session = new Zend_Session_Namespace('Auth');
+?>
     <script>
         window.onload = function() {
             var a1 = document.getElementById('signin-link');
@@ -138,9 +153,9 @@ if (1 <> $session->auth) {
             <div style="clear: both;"></div>
         </div>
         <div id="main_content">
-            <?php
-            echo $this->layout()->content;
-            ?>
+<?php
+echo $this->layout()->content;
+?>
             <div style="display: block; clear: both"></div>
         </div>
 
