--- a/application/layouts/layout.phtml
+++ b/application/layouts/layout.phtml
@@ -106,6 +106,7 @@ if (1 <> $session->auth) {
                 <a href="<?php echo $this->url(array('controller' => 'index', 'action' => 'index'), null, true); ?>"><img src="<?php echo $this->baseUrl('img/CapexOpex1.jpg'); ?>"></a>
             </div>
             <div id="top_menu">
+                <a href="<?php echo $this->url(array('controller'=>'index', 'action'=>'change-lang', 'lang'=>'ua'), null, true);?>">Укр</a> | <a href="<?php echo $this->url(array('controller'=>'index', 'action'=>'change-lang', 'lang'=>'en'), null, true)?>">Eng</a>
                 <?php
                 if (1 == $session->auth) {
                     echo '<a href="#" id="signoff-link">' . $this->translate('logout') . '</a>';
